...
                            onNavigate = { id -> onNavigate(id) },
                            onNotificationButton = { onNotificationButton(term) },
                        )
                    }
                } // LazyColumn
            }
            AddTermButton(
                onClick = { viewmodel.showAlert() }
            )

            if (showAlertDialog) {
                AddTermAlert(
                    textFieldState = viewmodel.controller,
...
                            viewmodel.addTerm(false)
                            viewmodel.controller.clearText()
                        }
                        viewmodel.hideAlert()
                    },
                    onDismiss = { viewmodel.hideAlert() },
                    tag = "TermAlertDialog"
                ) // AddTermAlert
            } // if (showAlertDialog)
        }
    }
}
